--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div id="quiz"></div>
 
 <script>
-const BACKEND_URL = "https://ai-quizcraft.onrender.com"; // Replace with your Render URL
+const BACKEND_URL = "https://ai-quizcraft.onrender.com"; // Your Render backend URL
 
 async function generateQuiz() {
   const notes = document.getElementById("notes").value;
