--- a/index.html
+++ b/index.html
@@ -1,63 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI QuizCraft</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>AI QuizCraft</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    margin: 20px;
+    background-color: #f7f7f7;
+    text-align: center;
+  }
+  h1 {
+    color: #333;
+    margin-bottom: 20px;
+  }
+  textarea {
+    width: 90%;
+    max-width: 400px;
+    height: 120px;
+    padding: 10px;
+    font-size: 16px;
+    margin-bottom: 10px;
+    resize: vertical;
+  }
+  select, button {
+    padding: 10px 15px;
+    font-size: 16px;
+    margin: 5px;
+  }
+  #quiz {
+    margin-top: 20px;
+    width: 90%;
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  #quiz div {
+    background-color: #fff;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 6px;
+    text-align: left;
+  }
+  #quiz button {
+    margin: 3px;
+    padding: 6px 10px;
+    font-size: 14px;
+  }
+  hr {
+    border: none;
+    border-top: 1px solid #ddd;
+    margin: 10px 0;
+  }
+</style>
 </head>
 <body>
-  <h1>AI QuizCraft</h1>
 
-  <textarea id="notes" placeholder="Paste teacher notes here" rows="6" cols="40"></textarea><br><br>
+<h1>AI QuizCraft</h1>
 
-  <select id="difficulty">
-    <option value="easy">Easy</option>
-    <option value="medium">Medium</option>
-    <option value="hard">Hard</option>
-  </select><br><br>
+<textarea id="notes" placeholder="Paste teacher notes here"></textarea><br>
 
-  <button onclick="generateQuiz()">Generate Quiz</button>
+<select id="difficulty">
+  <option value="easy">Easy</option>
+  <option value="medium">Medium</option>
+  <option value="hard">Hard</option>
+</select><br>
 
-  <h3>Quiz Output:</h3>
-  <div id="quiz"></div>
+<button onclick="generateQuiz()">Generate Quiz</button>
 
-  <script>
-    const BACKEND_URL = "https://ai-quizcraft.onrender.com"; // must match Render backend URL
+<h3>Quiz Output:</h3>
+<div id="quiz"></div>
 
-    async function generateQuiz() {
-      const notes = document.getElementById("notes").value;
-      const difficulty = document.getElementById("difficulty").value;
-      const container = document.getElementById("quiz");
-      container.innerHTML = "Generating quiz...";
+<script>
+const BACKEND_URL = "https://ai-quizcraft.onrender.com"; // Render backend URL
 
-      try {
-        const response = await fetch(`${BACKEND_URL}/quiz`, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ notes, difficulty })
-        });
+async function generateQuiz() {
+  const notes = document.getElementById("notes").value.trim();
+  const difficulty = document.getElementById("difficulty").value;
+  const container = document.getElementById("quiz");
+  container.innerHTML = "Generating quiz...";
 
-        if (!response.ok) {
-          container.innerHTML = `Error: ${response.statusText}`;
-          return;
-        }
+  if (!notes) {
+    container.innerHTML = "Please enter teacher notes!";
+    return;
+  }
 
-        const data = await response.json();
-        container.innerHTML = "";
+  try {
+    const response = await fetch(`${BACKEND_URL}/quiz`, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ notes, difficulty })
+    });
 
-        data.forEach((q, idx) => {
-          const div = document.createElement("div");
-          div.innerHTML = `<p><b>${idx+1}. ${q.question}</b></p>` +
-            q.options.map((opt, i) =>
-              `<button onclick="alert('${i===q.answer ? 'Correct!' : 'Wrong!'}')">${opt}</button>`
-            ).join(" ");
-          container.appendChild(div);
-        });
-      } catch (err) {
-        container.innerHTML = "⚠️ Error generating quiz.";
-        console.error(err);
-      }
+    if (!response.ok) {
+      container.innerHTML = `Error: ${response.statusText}`;
+      return;
     }
-  </script>
+
+    const data = await response.json();
+    container.innerHTML = "";
+
+    data.forEach((q, idx) => {
+      const div = document.createElement("div");
+      div.innerHTML = `<p><b>${idx + 1}. ${q.question}</b></p>`;
+      q.options.forEach((opt, i) => {
+        const btn = document.createElement("button");
+        btn.textContent = opt;
+        btn.onclick = () => {
+          btn.style.backgroundColor = i === q.answer ? "#4CAF50" : "#f44336";
+        };
+        div.appendChild(btn);
+      });
+      container.appendChild(div);
+      container.appendChild(document.createElement("hr"));
+    });
+
+  } catch (err) {
+    container.innerHTML = "Error generating quiz.";
+    console.error(err);
+  }
+}
+</script>
+
 </body>
 </html>
